--- a/index.html
+++ b/index.html
@@ -22,12 +22,10 @@
         <h1>Beckett's Projects</h1>
         <section class="intro">
             <div class="user-info"></div>
-            <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="beckh" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/beckh?trk=profile-badge">LinkedIn</a></div>
-    
         </section>
         
         <section class="LinkedIn">
-        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="beckh" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/beckh?trk=profile-badge">Beckett Hoefling</a></div>
+        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="beckh" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/beckh?trk=profile-badge">LinkedIn</a></div>
         </section>    
 
         <section class="repos">
